Fix window button spacing

--- a/src/app/window/window.component.sass
+++ b/src/app/window/window.component.sass
@@ -30,6 +30,8 @@ $bg2: rgba(68,71,90, 0.8)
         cursor: grab
         display: flex
         align-items: center
+        align-content: center
+        justify-content: center
 
         .title
             padding: 2px 1em
@@ -44,22 +46,23 @@ $bg2: rgba(68,71,90, 0.8)
                 font-weight: normal
 
         .buttons
-            height: 1.75rem
-            min-width: 5.5rem
+            min-width: 5.50rem
 
-        ul.buttons
+        menu.buttons
             list-style: none
+            line-height: 80%
             display: flex
-            gap: 0.75rem
+            gap: 0.40rem
+            
             align-items: center
             justify-content: center
-            padding: 2px 15px
             background-color: rgba(68,71,90, 0.8)
             border-radius: 20px
+            padding: 0.35rem
 
             .button
                 color: rgba(98,114,164, 0.75)
-                font-size: 1.25rem
+                font-size: 1.15rem
 
             .close.button
                 color: rgba(255,85,85, 0.75)
